[package]
name = "portava"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.13", features = ["derive"] }
clap-num = "1.1.1"
num_cpus = "1.16.0"
number_range = "0.3.2"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
